fix(control): Grid Menu is shown behind grid when using modal window

--- a/src/app/modules/angular-slickgrid/styles/slick-controls.scss
+++ b/src/app/modules/angular-slickgrid/styles/slick-controls.scss
@@ -81,7 +81,7 @@
   min-width: 200px;
   cursor: default;
   position:absolute;
-  z-index:20;
+  z-index: 2000;
 	overflow: auto;
   resize: both;
 
